--- a/style.css
+++ b/style.css
@@ -17,25 +17,29 @@
         min-height:100vh;
         max-width:100vw;
         background-color: var(--main-color);
-        border:.01px solid red;
+        display:flex;
+        justify-content: center;
+        align-items:center;
+        margin:10rem 1rem;
     }
 
 /* Sub-Containers I */
     main{
-        width:max(15rem,89vw);
-        display:flex;
-        flex-direction: column;
-        margin:auto;
+        border-radius:.7rem;
+        width:100vw;
+        min-height:50rem;
+        display:grid;
+        justify-content:center;
+        grid-template-columns: repeat(auto-fit,minmax(15rem,calc(100rem / 3))); 
     }
 
 /* Sub-Containers  II */
     section{
-        padding: 5rem clamp(2.7rem,22vw,18rem) clamp(2.7rem,5vh,5rem) clamp(2.7rem,11vw,4.5rem); 
+        padding: 5rem clamp(2.7rem,22vw,7.5rem) clamp(2.7rem,5vh,5rem) clamp(2.7rem,11vw,5rem); 
     }
 
     .sedans{
         background-color: var(--sedans);
-
         border-radius:.7rem .7rem 0 0;
     }
 
@@ -50,30 +54,30 @@
 
 /* Sub-Containers III */
     svg{
-        width:clamp(4.6rem,15vw,8rem)
+        width:clamp(4.6rem,15vw,6.5rem)
     }
 
     h1{
         color:var(--main-color);
         font-family: var(--header-font);
-        font-size:clamp(2.7rem,10vw,5rem);
+        font-size:clamp(2.7rem,10vw,3.9rem);
         text-transform: uppercase;
     }
 
     p{
         color:var(--paragraph-color);
-        font-size:clamp(1rem,3.7vw,1.8rem);
+        font-size:clamp(1rem,3.7vw,1.5rem);
         line-height:2.3rem;
-        padding-bottom:1rem;
     }
 
     button{
         background-color: var(--main-color);
         border:none;
         border-radius: 3rem;
-        width:clamp(9rem,36vw,18rem);
-        font-size:clamp(1rem,3.3vw,1.2rem); 
+        width:clamp(9rem,36vw,15rem);
+        font-size:clamp(1rem,3.3vw,1.4rem); 
         height:clamp(3rem,15vw,4.5rem);
+        margin-top:1rem;
     }
 
     .sedans button{
@@ -112,53 +116,23 @@
     }
 
 /* Media Queries */
-@media screen and (orientation:landscape),(min-width:600px){
-    /* Main Containers */
+@media screen and (min-width:687px){
+    /*Sub-Containers I */
         body{
-            padding:0;
+            margin:0;
         }
-    
-    /* Sub-Containers I */
-        main{
-            flex-direction:row;
-            height:52rem;
-            width:clamp(10rem,69.4vw,100rem);
-        }
-    
+        
     /* Sub-Containers  II */
-        section{
-            padding: 5rem clamp(2rem,5.5vw,7.5rem) 5rem 5rem;
-            
-        }
         .sedans{
             border-radius: .7rem 0 0 .7rem;
         }
 
         .luxury{
             border-radius: 0 .7rem .7rem 0;
-
         }
 
     /* Sub-Containers III */
-
-        svg{
-            width:6.5rem;
-        }
-
-        h1{
-            font-size:3.9rem;
-        }
-
-        p{
-            font-size:1.5rem;
-            padding-bottom:8rem;
-        }
-
         button{
-            width:15rem;
-            font-size:1.4rem;
-            height:4.5rem;
+            margin-top:8rem;
         }
-    }
-    
-    
+}
